<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>createWindow</class>
 <widget class="QMainWindow" name="createWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>1280</width>
    <height>420</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Windows Manager - Create Instance</string>
  </property>
  <property name="styleSheet">
   <string notr="true">background-color:rgb(58, 58, 58);
color:rgb(227, 227, 227)</string>
  </property>
  <widget class="QWidget" name="centralwidget">
   <widget class="QGroupBox" name="createBox">
    <property name="geometry">
     <rect>
      <x>30</x>
      <y>100</y>
      <width>1241</width>
      <height>181</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <family>Lucida Sans</family>
      <pointsize>12</pointsize>
     </font>
    </property>
    <property name="title">
     <string/>
    </property>
    <widget class="QGroupBox" name="listBox">
     <property name="geometry">
      <rect>
       <x>70</x>
       <y>90</y>
       <width>1091</width>
       <height>61</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <family>Lucida Sans</family>
      </font>
     </property>
     <property name="styleSheet">
      <string notr="true">background-color:rgb(91, 91, 91)</string>
     </property>
     <property name="title">
      <string/>
     </property>
    </widget>
    <widget class="QComboBox" name="selectBox">
     <property name="enabled">
      <bool>false</bool>
     </property>
     <property name="geometry">
      <rect>
       <x>410</x>
       <y>30</y>
       <width>751</width>
       <height>41</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <family>Lucida Sans</family>
      </font>
     </property>
     <property name="styleSheet">
      <string notr="true">color:rgb(52, 52, 52);
background-color:rgb(144, 144, 144)</string>
     </property>
    </widget>
    <widget class="QPushButton" name="manSelect">
     <property name="enabled">
      <bool>false</bool>
     </property>
     <property name="geometry">
      <rect>
       <x>130</x>
       <y>30</y>
       <width>181</width>
       <height>41</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <family>Lucida Sans</family>
      </font>
     </property>
     <property name="styleSheet">
      <string notr="true">color:rgb(52, 52, 52);
background-color:rgb(59, 218, 218)</string>
     </property>
     <property name="text">
      <string>Manual Select</string>
     </property>
    </widget>
   </widget>
   <widget class="QPushButton" name="createInsBtn">
    <property name="enabled">
     <bool>false</bool>
    </property>
    <property name="geometry">
     <rect>
      <x>390</x>
      <y>310</y>
      <width>511</width>
      <height>51</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <family>Lucida Sans</family>
      <pointsize>18</pointsize>
     </font>
    </property>
    <property name="styleSheet">
     <string notr="true">color:rgb(52, 52, 52);
background-color:rgb(59, 218, 218)</string>
    </property>
    <property name="text">
     <string>Create Instances</string>
    </property>
   </widget>
   <widget class="QPushButton" name="colorButton">
    <property name="geometry">
     <rect>
      <x>930</x>
      <y>40</y>
      <width>221</width>
      <height>41</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <family>Lucida Sans</family>
      <pointsize>10</pointsize>
     </font>
    </property>
    <property name="styleSheet">
     <string notr="true">color:rgb(52, 52, 52);
background-color:rgb(59, 218, 218)</string>
    </property>
    <property name="text">
     <string>Change Symbol Colour</string>
    </property>
   </widget>
   <widget class="QLabel" name="colorLabel">
    <property name="geometry">
     <rect>
      <x>1170</x>
      <y>30</y>
      <width>61</width>
      <height>61</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <family>Lucida Sans</family>
     </font>
    </property>
    <property name="styleSheet">
     <string notr="true">background-color:rgb(218, 218, 218);
margin:5px;
border:2px solid rgb(0, 0, 0)
</string>
    </property>
    <property name="text">
     <string/>
    </property>
   </widget>
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
      <x>30</x>
      <y>40</y>
      <width>71</width>
      <height>31</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <family>Lucida Sans</family>
      <pointsize>12</pointsize>
     </font>
    </property>
    <property name="text">
     <string>Symbol:</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="symbolEdit">
    <property name="geometry">
     <rect>
      <x>110</x>
      <y>40</y>
      <width>521</width>
      <height>41</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <family>Lucida Sans</family>
      <pointsize>12</pointsize>
     </font>
    </property>
    <property name="styleSheet">
     <string notr="true">background-color:rgb(91, 91, 91)</string>
    </property>
   </widget>
   <widget class="QComboBox" name="instanceModes">
    <property name="geometry">
     <rect>
      <x>660</x>
      <y>40</y>
      <width>241</width>
      <height>41</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <family>Lucida Sans</family>
      <pointsize>10</pointsize>
     </font>
    </property>
    <property name="styleSheet">
     <string notr="true">color:rgb(52, 52, 52);
background-color:rgb(144, 144, 144)</string>
    </property>
   </widget>
  </widget>
  <widget class="QStatusBar" name="statusbar"/>
  <action name="createAction">
   <property name="text">
    <string>Create New Instance</string>
   </property>
  </action>
  <action name="openAction">
   <property name="text">
    <string>Open Existing Instances</string>
   </property>
  </action>
  <action name="quitAction">
   <property name="text">
    <string>Quit</string>
   </property>
  </action>
  <action name="configAction">
   <property name="text">
    <string>Config Menu</string>
   </property>
  </action>
  <action name="locationAction">
   <property name="text">
    <string>Saved .exe Locations</string>
   </property>
  </action>
  <action name="autoplayAction">
   <property name="text">
    <string>Autoplay Speed</string>
   </property>
  </action>
 </widget>
 <resources/>
 <connections/>
</ui>
